[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/b_button.png" type="Texture" id=1]
[ext_resource path="res://characters/maia/Maia.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://ui/actions/ActionLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Building.gd" type="Script" id=5]
[ext_resource path="res://ui/dialogue/Dialogue.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/fishing/Fishing.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/requests/Requests.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/shop/Shop.tscn" type="PackedScene" id=9]

[node name="Map" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]

[node name="Bounds" type="StaticBody2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitControl" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -14.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/ExitControl"]
margin_right = 10.0
margin_bottom = 14.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer/Control/ExitControl"]
margin_left = 14.0
margin_right = 33.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
custom_colors/font_color = Color( 0.87451, 0.964706, 0.960784, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.172549, 0.180392, 1 )
text = "Exit"

[node name="ActionLabel" parent="CanvasLayer/Control" instance=ExtResource( 4 )]

[node name="Fishing" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Requests" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
mouse_filter = 2

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource( 6 )]
mouse_filter = 1

[node name="Shop" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="Maia" parent="." instance=ExtResource( 2 )]
scale = Vector2( 2, 2 )
sidescrolling_mode = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="exit" from="." to="." method="_on_Map_exit"]
[connection signal="can_interact" from="Maia" to="CanvasLayer/Control/ActionLabel" method="_on_Maia_can_interact"]
[connection signal="interact_end" from="Maia" to="." method="_on_Maia_interact_end"]
[connection signal="interact_end" from="Maia" to="CanvasLayer/Control/ActionLabel" method="_on_Maia_interact_end"]
[connection signal="interact_start" from="Maia" to="." method="_on_Maia_interact_start"]
[connection signal="interact_start" from="Maia" to="CanvasLayer/Control/ActionLabel" method="_on_Maia_interact_start"]
